--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,7 +8,7 @@
     <string name="nav_header_desc">Navigation header</string>
     <string name="action_settings">Settings</string>
 
-    <string name="menu_home">Feed</string>
-    <string name="menu_gallery">Matches</string>
-    <string name="menu_slideshow">About</string>
+    <string name="menu_feed">Feed</string>
+    <string name="menu_matches">Matches</string>
+    <string name="menu_about">About</string>
 </resources>
