--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,12 +3,13 @@
     <string name="title_activity_main">MainActivity</string>
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
-    <string name="nav_header_title">Nickname</string>
-    <string name="nav_header_subtitle">Full Name</string>
+    <string name="nav_header_title">Full Name</string>
+    <string name="nav_header_subtitle">Email</string>
     <string name="nav_header_desc">Navigation header</string>
     <string name="action_settings">Settings</string>
 
     <string name="menu_feed">Feed</string>
     <string name="menu_matches">Matches</string>
     <string name="menu_about">About</string>
+    <string name="sign_out">Sign Out</string>
 </resources>
