--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,4 +12,5 @@
     <string name="menu_matches">Matches</string>
     <string name="menu_about">About</string>
     <string name="sign_out">Sign Out</string>
+    <string name="sign_in_with_google">Sign in With Google</string>
 </resources>
