--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,4 +14,5 @@
     <string name="menu_profile">Profile</string>
     <string name="sign_out">Sign Out</string>
     <string name="sign_in_with_google">Sign in With Google</string>
+    <string name="no_matches">No Matches</string>
 </resources>
