--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,5 +17,8 @@
     <string name="no_matches">No Matches</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="chip_text_home">1</string>
+    <string name="chip_text_tie">X</string>
+    <string name="chip_text_away">2</string>
 
 </resources>
