--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,10 +15,10 @@
     <string name="sign_out">Sign Out</string>
     <string name="sign_in_with_google">Sign in With Google</string>
     <string name="no_matches">No Matches</string>
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
-    <string name="chip_text_home">1</string>
-    <string name="chip_text_tie">X</string>
-    <string name="chip_text_away">2</string>
+
+    <string name="chip_text_home">Home</string>
+    <string name="chip_text_draw">Draw</string>
+    <string name="chip_text_away">Away</string>
+    <string name="select_winner_team_textView">Select winner team:</string>
 
 </resources>
